controller/pkg/agentgateway/translator/testdata/delegation/route-delegation-scopes-gateway.yaml
# This gateway should NOT see any routes attached
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: not-test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent
  namespace: default
spec:
  parentRefs:
  - name: test-gateway
  hostnames:
  - delegation.example
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team2
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team2
  - matches:
    - path:
        type: PathPrefix
        value: /local
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: child-team1-foo
  namespace: team1
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1/foo
    backendRefs:
    - name: httpbin
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: team1
spec:
  ports:
  - port: 8000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-parent
  namespace: team1
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: child-team1-foo
---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - routeGroupKey: default/parent/team1/*
        weight: 1
      hostnames:
      - delegation.example
      key: default/parent.00.http
      listenerKey: default/test-gateway.http
      matches:
      - path:
          pathPrefix: /anything/team1
      name:
        kind: HTTPRoute
        name: parent
        namespace: default
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - routeGroupKey: default/parent/team2/*
        weight: 1
      hostnames:
      - delegation.example
      key: default/parent.01.http
      listenerKey: default/test-gateway.http
      matches:
      - path:
          pathPrefix: /anything/team2
      name:
        kind: HTTPRoute
        name: parent
        namespace: default
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 8080
          service:
            hostname: infra-backend-v1.default.svc.cluster.local
            namespace: default
        weight: 1
      hostnames:
      - delegation.example
      key: default/parent.02.http
      listenerKey: default/test-gateway.http
      matches:
      - path:
          pathPrefix: /local
      name:
        kind: HTTPRoute
        name: parent
        namespace: default
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 8000
          service:
            hostname: httpbin.team1.svc.cluster.local
            namespace: team1
        weight: 1
      key: team1/child-team1-foo.00.routegroup.default.parent.team1.wildcard
      matches:
      - path:
          pathPrefix: /anything/team1/foo
      name:
        kind: HTTPRoute
        name: child-team1-foo
        namespace: team1
      routeGroupKey: default/parent/team1/*
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: parent
    namespace: default
  spec: null
  status:
    parents:
    - conditions:
      - lastTransitionTime: fake
        message: ""
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: ""
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: agentgateway.dev/agentgateway
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test-gateway
        namespace: default
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: child-team1-foo
    namespace: team1
  spec: null
  status:
    parents: []
